# fibs-fizz-buzz

./: fibs-fizz-buzz.cabal
src/: FibsFizzBuzz.hs
test/: Spec.hs  Test.hs
